--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -219,7 +219,9 @@
     &.sxt-panel-button {
       margin-left: 29.7em;
       @media (min-width:  1680px) {
-        margin-left: ~"calc(25% + 2em)";
+        .gn &{
+          margin-left: ~"calc(25% + 1.2em)";
+        }
       }
     }
     &.sxt-adminbtn {
